FIx tm_a_pca overflow table (#439)
* Update tm_a_pca.R
* Update NEWS.md

--- a/inst/css/custom.css
+++ b/inst/css/custom.css
@@ -49,6 +49,10 @@
   display: block;
 }
 
+.overflow-scroll {
+  overflow: scroll;
+}
+
 .w-10 {
   width: 10%;
 }
